second push with new Readme

--- a/Analysis Book/2_Data_Explore.ipynb
+++ b/Analysis Book/2_Data_Explore.ipynb
@@ -793,6 +793,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ironically Staten Island has the highest yearly energy bill since 2010."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -800,6 +807,11 @@
    "source": [
     "total_kwh_consumption_by_year_and_borough = df.groupby(['year', 'borough'])['kwh_consumption'].sum()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -865,6 +877,26 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Brookyln seems to have the most energy/KWh consumption every year since 2010"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What we learned from the EDA?\n",
+    "\n",
+    "The most electricity is used in Brooklyn which is supported by Brooklyn being the most populated borough\n",
+    "\n",
+    "The least is used in Staten Island, which makes sense due to the smaller population\n",
+    "The months with the most electricity consumption are July and August, followed by January\n",
+    "NYCHA Developments that are federally funded use the most electricity while Section 8 housing and non residential use the least\n"
    ]
   }
  ],
