--- a/Analysis Book/2_Data_Explore.ipynb
+++ b/Analysis Book/2_Data_Explore.ipynb
@@ -796,7 +796,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ironically Staten Island has the highest yearly energy bill since 2010."
+    "Ironically Staten Island has the highest yearly energy bill since 2010.\n",
+    "\n",
+    "Nevertheless, from further research, out of all the boroughs, Staten Island had the highest homeownership rate at 69.8 percent. This is 4.4 percentage points higher than the national rate (65.4%), more than three times as high as the rate in the Bronx (19.6%), and over twice as high as the rates in Brooklyn (30.3%) and Manhattan (25.0%). Queens had the second-highest homeownership rate in the city at 45.6 percent."
    ]
   },
   {
