add codes in s3 notebook

--- a/notebook/01_data_cleaning.ipynb
+++ b/notebook/01_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,9 +142,57 @@
        "      <td>2808.0</td>\n",
        "      <td>5177.43</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>BLD 05</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>BLD 01 to 07</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>248</td>\n",
+       "      <td>B011800</td>\n",
+       "      <td>FEDERAL</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7223256</td>\n",
+       "      <td>N</td>\n",
+       "      <td>14764.04</td>\n",
+       "      <td>GOV/NYC/068</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>105600.0</td>\n",
+       "      <td>6057.22</td>\n",
+       "      <td>208.0</td>\n",
+       "      <td>2704.0</td>\n",
+       "      <td>6002.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>BLD 05</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>BLD 01 to 07</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>248</td>\n",
+       "      <td>B011800</td>\n",
+       "      <td>FEDERAL</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7223256</td>\n",
+       "      <td>N</td>\n",
+       "      <td>13729.54</td>\n",
+       "      <td>GOV/NYC/068</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>97600.0</td>\n",
+       "      <td>5598.34</td>\n",
+       "      <td>216.0</td>\n",
+       "      <td>2808.0</td>\n",
+       "      <td>5323.20</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 27 columns</p>\n",
+       "<p>5 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -152,38 +200,46 @@
        "0            ADAMS   BRONX        ADAMS   BLD 05      NONE  BLD 01 to 07   \n",
        "1            ADAMS   BRONX        ADAMS   BLD 05      NONE  BLD 01 to 07   \n",
        "2            ADAMS   BRONX        ADAMS   BLD 05      NONE  BLD 01 to 07   \n",
+       "3            ADAMS   BRONX        ADAMS   BLD 05      NONE  BLD 01 to 07   \n",
+       "4            ADAMS   BRONX        ADAMS   BLD 05      NONE  BLD 01 to 07   \n",
        "\n",
        "   TDS #  EDP  RC Code Funding Source  ... Meter Number Estimated  \\\n",
        "0  118.0  248  B011800        FEDERAL  ...      7223256         N   \n",
        "1  118.0  248  B011800        FEDERAL  ...      7223256         N   \n",
        "2  118.0  248  B011800        FEDERAL  ...      7223256         N   \n",
+       "3  118.0  248  B011800        FEDERAL  ...      7223256         N   \n",
+       "4  118.0  248  B011800        FEDERAL  ...      7223256         N   \n",
        "\n",
        "   Current Charges   Rate Class Bill Analyzed Consumption (KWH)  KWH Charges  \\\n",
        "0         15396.82  GOV/NYC/068           Yes          128800.0      7387.97   \n",
        "1         14556.34  GOV/NYC/068           Yes          115200.0      6607.87   \n",
        "2         13904.98  GOV/NYC/068           Yes          103200.0      5919.55   \n",
+       "3         14764.04  GOV/NYC/068           Yes          105600.0      6057.22   \n",
+       "4         13729.54  GOV/NYC/068           Yes           97600.0      5598.34   \n",
        "\n",
        "  Consumption (KW) KW Charges  Other charges  \n",
        "0            216.0     2808.0        5200.85  \n",
        "1            224.0     2912.0        5036.47  \n",
        "2            216.0     2808.0        5177.43  \n",
+       "3            208.0     2704.0        6002.82  \n",
+       "4            216.0     2808.0        5323.20  \n",
        "\n",
-       "[3 rows x 27 columns]"
+       "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "energy_raw = pd.read_csv(\"./data/raw/Electric_Consumption_And_Cost__2010_-_Feb_2023__20240417.csv\")\n",
-    "energy_raw.head(3)"
+    "energy_raw = pd.read_csv(\"../data/raw/Electric_Consumption_And_Cost__2010_-_Feb_2023__20240417.csv\")\n",
+    "energy_raw.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +254,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +274,7 @@
        "(447849, 27)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +435,7 @@
        "4            4/26/10          5/24/10  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +543,7 @@
        "1  2/25/10  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +584,7 @@
        "16"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +617,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +823,7 @@
        "347592    2020-02        NaN      NaN  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +914,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1080,7 @@
        "4 2010-05-24  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1187,7 @@
        "1 2010-02-25  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1329,7 @@
        "1 2010-02-25  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1515,7 @@
        "102357 2013-10-23 2013-11-21  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
